tests/baselines/reference/genericConstraintOnExtendedBuiltinTypes2.errors.txt
tests/cases/compiler/genericConstraintOnExtendedBuiltinTypes2.ts(22,13): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Tween<T>'.


==== tests/cases/compiler/genericConstraintOnExtendedBuiltinTypes2.ts (1 errors) ====
    module EndGate {
        export interface ICloneable {
            Clone(): any;
        }
    }
    
    interface Number extends EndGate.ICloneable { }
    
    module EndGate.Tweening {
        export class Tween<T extends ICloneable>{
            private _from: T;
    
            constructor(from: T) {
                this._from = from.Clone();
            }
        }
    }
    
    module EndGate.Tweening {
        export class NumberTween extends Tween<Number>{
            constructor(from: number) {
                super(from);
                ~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Tween<T>'.
            }
        }
    }